Add frontend and fix issues in backend